--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -190,3 +190,11 @@ form .form-control {
 	border-radius: 15px !important;
 	border: 1px solid #31A13C !important;
 }
+
+.policy_link {
+	color: #31A13C;
+}
+
+.policy_link:hover {
+	color: #31A13C;
+}
