--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -114,7 +114,7 @@ footer ul li a {
 	height: 60px;
 	display: block;
 	outline: none;
-	padding: 10px 0 #fff;
+	padding: 10px 10px;
 	cursor: pointer;
 	background: #FFFFFF 0% 0% no-repeat padding-box;
 	box-shadow: 9px 9px 6px #00000029;
@@ -122,7 +122,6 @@ footer ul li a {
 	border-radius: 14px;
 	text-align: center;
 	font: 28px Segoe UI;
-	letter-spacing: 0px;
 	color: #000000;
 }
 
