--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -201,3 +201,17 @@ form .form-control {
 .policy_link:hover {
 	color: #31A13C;
 }
+
+
+
+/* Help Page */
+
+.answer_box {
+	border-radius: 15px !important; 
+	border: 1px solid #31A13C !important;
+}
+
+.button_box {
+	border-radius: 15px !important;
+	border: 1px solid #31A13C !important;
+}
