--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -293,6 +293,20 @@ form .form-control {
     color: #31A13C;
 }
 
+.all_categories_nav {
+    background-color: #31A13C;
+    padding: 10px 10px;
+    margin-left: 20px;
+    margin-right: -20px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.category_nav {
+    font-size: 17px;
+    margin-top: 5px;
+}
+
 .sort_by_btn {
     border: 1px solid #31A13C;
     border-radius: 5px;
@@ -339,7 +353,7 @@ form .form-control {
     transform: scale(1.4);
 }
 
-.show_more {
+.show_more_btn {
     margin-top: 15px;
     background-color: #FFFFFF;
     height: 60px;
@@ -370,4 +384,203 @@ form .form-control {
     box-shadow: 0px 4px 4px 4px #888888;
     border-radius: 3px;
     height: 19%;
+}
+
+.select-box {
+    position: relative;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    margin-top: 50px;
+}
+
+.select-box .options-container {
+    background: white;
+    color: black;
+    max-height: 0;
+    width: 100%;
+    opacity: 0;
+    transition: all 0.4s;
+    border-radius: 8px;
+    overflow: hidden;
+    order: 1;
+    border: 1px solid #31A13C;
+}
+
+.selected {
+    background: #289433;
+    border-radius: 8px;
+    margin-bottom: 8px;
+    color: #f5f6fa;
+    position: relative;
+    order: 0;
+    font-weight: bold;
+}
+
+.selected::after {
+    content: "";
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    height: 100%;
+    width: 32px;
+    right: 10px;
+    top: 5px;
+    transition: all 0.4s;
+}
+
+.select-box .options-container.active {
+    max-height: 240px;
+    opacity: 1;
+    overflow-y: scroll;
+    margin-top: 54px;
+}
+
+.select-box .options-container.active+.selected::after {
+    transform: rotateX(180deg);
+    top: -6px;
+}
+
+.select-box .options-container::-webkit-scrollbar {
+    width: 8px;
+    background: #2f3640;
+    border-radius: 0 8px 8px 0;
+}
+
+.select-box .options-container::-webkit-scrollbar-thumb {
+    background: #289433;
+    border-radius: 0 8px 8px 0;
+}
+
+.select-box .option,
+.selected {
+    padding: 12px 24px;
+    cursor: pointer;
+}
+
+.select-box .option:hover {
+    background: #289433;
+}
+
+.select-box label {
+    cursor: pointer;
+}
+
+.select-box .option .radio {
+    display: none;
+}
+
+.search-box input {
+    width: 100%;
+    padding: 12px 16px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    position: absolute;
+    border-radius: 8px 8px 0 0;
+    z-index: 100;
+    border: 8px solid #2f3640;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.4s;
+}
+
+.search-box input:focus {
+    outline: none;
+}
+
+.select-box .options-container.active~.search-box input {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+
+/* My Orders */
+
+.account_block {
+    margin-top: 9%;
+    background: #F7F7F7 0% 0% no-repeat padding-box;
+    box-shadow: 17px 15px 0px #31A13C;
+    border: 1px solid #707070;
+    border-radius: 30px;
+    height: 100%;
+    /*width: 100%;*/
+}
+
+.p_name {
+    font-weight: bold;
+    font-size: 17px;
+    text-align: center;
+}
+
+.p_email {
+    text-align: center;
+    margin-top: -10px;
+}
+
+.hr_account {
+    margin-top: -7px;
+    border: 2px solid #31A13C;
+    border-radius: 8px;
+    box-shadow: 2px 2px 3px #99fd99;
+}
+
+#completed_block {
+    display: none;
+}
+
+.active_completed {
+    height: 50px;
+    width: 250px;
+    margin-top: -10px;
+    cursor: pointer;
+    background: #F7F7F7;
+    border: none;
+    text-align: center;
+    font: 18px Segoe UI;
+    letter-spacing: 0px;
+    color: #000000;
+}
+
+.active_completed:hover {
+    color: black;
+}
+
+.active_completed:focus {
+    outline: none;
+    border-bottom: 2px solid #31A13C;
+}
+
+.orders_block {
+    background-color: white;
+    border: 1px solid #31A13C;
+    width: 100%;
+    height: 190px;
+    margin-top: 30px;
+    border-radius: 20px;
+    box-shadow: 4px 6px 5px #888888;
+    cursor: pointer;
+}
+
+.delivery_text {
+    font-weight: bold;
+    font-size: 17px;
+    margin-top: 15px;
+}
+
+.product_img_orders {
+    width: 100px;
+    height: 100px;
+    margin-right: 75%;
+}
+
+.status {
+    font-size: 17px;
+    margin-top: 15px;
+    margin-left: 41%;
+    background-color: #31A13C;
+    border: 1px solid #31A13C;
+    border-radius: 8px;
+    color: white;
+    width: 80px;
+    height: 30px;
 }
