--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -503,7 +503,6 @@ form .form-control {
     border: 1px solid #707070;
     border-radius: 30px;
     height: 100%;
-    /*width: 100%;*/
 }
 
 .p_name {
@@ -554,7 +553,7 @@ form .form-control {
     background-color: white;
     border: 1px solid #31A13C;
     width: 100%;
-    height: 190px;
+    height: 25%;
     margin-top: 30px;
     border-radius: 20px;
     box-shadow: 4px 6px 5px #888888;
@@ -568,9 +567,10 @@ form .form-control {
 }
 
 .product_img_orders {
-    width: 100px;
-    height: 100px;
+    width: 15%;
+    height: 50%;
     margin-right: 75%;
+    padding: 5px;
 }
 
 .status {
@@ -581,6 +581,25 @@ form .form-control {
     border: 1px solid #31A13C;
     border-radius: 8px;
     color: white;
-    width: 80px;
+    width: 27%;
+    height: 50%;
+}
+
+.account_block_bnt {
+    background-color: white;
+    border: 1px solid #31A13C;
+    width: 100%;
     height: 30px;
+    margin-top: 10px;
+    border-radius: 15px;
+    box-shadow: 4px 6px 5px #888888;
+    cursor: pointer;
+}
+
+.account_block_link {
+    color: black
+}
+
+.account_block_link:hover {
+    color: #31A13C;
 }
