--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -228,6 +228,10 @@ form .form-control {
     border: 1px solid #31A13C !important;
 }
 
+.card_queston {
+    border: none;
+}
+
 
 /* About Us page */
 
@@ -305,6 +309,28 @@ form .form-control {
 .category_nav {
     font-size: 17px;
     margin-top: 5px;
+}
+
+.filters_block {
+    background-color: #31A13C;
+    border: 1px solid #31A13C;
+    width: 100%;
+    height: 50px;
+    margin-top: 30px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px #888888;
+    cursor: pointer;
+
+}
+
+.filter_btn{
+    background-color: white;
+    height: 60%;
+    width: 60%;
+    border: 1px solid #31A13C;
+    margin-top: 5%;
+    margin-left: 5%;
+    border-radius: 10px;
 }
 
 .sort_by_btn {
@@ -391,7 +417,7 @@ form .form-control {
     display: flex;
     width: 100%;
     flex-direction: column;
-    margin-top: 50px;
+    margin-top: 10%;
 }
 
 .select-box .options-container {
@@ -443,7 +469,7 @@ form .form-control {
 
 .select-box .options-container::-webkit-scrollbar {
     width: 8px;
-    background: #2f3640;
+    background: white;
     border-radius: 0 8px 8px 0;
 }
 
@@ -478,7 +504,7 @@ form .form-control {
     position: absolute;
     border-radius: 8px 8px 0 0;
     z-index: 100;
-    border: 8px solid #2f3640;
+    border: 8px solid #289433;
     opacity: 0;
     pointer-events: none;
     transition: all 0.4s;
