--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -226,10 +226,15 @@ form .form-control {
 .button_box {
     border-radius: 15px !important;
     border: 1px solid #31A13C !important;
+    color: black !important;
 }
 
 .card_queston {
     border: none;
+}
+
+.card-header {
+    background-color:  #F7F7F7 !important;
 }
 
 
@@ -470,12 +475,12 @@ form .form-control {
 .select-box .options-container::-webkit-scrollbar {
     width: 8px;
     background: white;
-    border-radius: 0 8px 8px 0;
+    border-radius: 8px;;
 }
 
 .select-box .options-container::-webkit-scrollbar-thumb {
     background: #289433;
-    border-radius: 0 8px 8px 0;
+    border-radius: 8px;
 }
 
 .select-box .option,
@@ -528,7 +533,7 @@ form .form-control {
     box-shadow: 17px 15px 0px #31A13C;
     border: 1px solid #707070;
     border-radius: 30px;
-    height: 100%;
+    height: 350px;
 }
 
 .p_name {
@@ -582,7 +587,6 @@ form .form-control {
     margin-top: 30px;
     border-radius: 20px;
     box-shadow: 4px 6px 5px #888888;
-    cursor: pointer;
 }
 
 .delivery_text {
@@ -610,7 +614,7 @@ form .form-control {
 }
 
 .account_block_bnt {
-    background-color: white;
+    background: transparent linear-gradient(221deg, #FFFFFF 0%, #31A13C 100%) 0% 0% no-repeat padding-box;
     border: 1px solid #31A13C;
     width: 100%;
     height: 30px;
@@ -625,6 +629,233 @@ form .form-control {
 }
 
 .account_block_link:hover {
+    color: white;
+}
+
+
+#completed_block::-webkit-scrollbar {
+    width: 6px;
+    background:  #F7F7F7;
+    border-radius: 8px;
+    visibility: hidden;
+}
+
+#completed_block::-webkit-scrollbar-thumb {
+    background: #289433;
+    border-radius: 8px;
+    visibility: hidden;
+}
+
+#active_block::-webkit-scrollbar {
+    width: 6px;
+    background:  #F7F7F7;
+    border-radius: 8px;
+    visibility: hidden;
+}
+
+#active_block::-webkit-scrollbar-thumb {
+    background: #289433;
+    border-radius: 8px;
+    visibility: hidden;
+}
+
+
+/* Order Information Page*/ 
+
+.chevron_back {
+    color: black;
+}
+
+.chevron_back:hover {
     color: #31A13C;
 }
 
+.delivery_text_order_info {
+    font-weight: bold;
+    font-size: 18px;
+    margin-top: 3px;
+}
+
+.status_order_info {
+    font-size: 17px;
+    margin-top: 3px;
+    margin-left: 41%;
+    background-color: #31A13C;
+    border: 1px solid #31A13C;
+    border-radius: 8px;
+    color: white;
+    width: 27%;
+    height: 60%;
+}
+
+.chevron {
+    margin-top: 25%;
+    margin-left: 20%;
+    color: black;
+}
+
+.chevron:hover {
+    color: #31A13C;
+}
+
+.order_info_text_in_block {
+    font-weight: bold;
+    font-size: 17px;
+}
+
+.tracking_block {
+    background-color: white;
+    border: 1px solid #31A13C;
+    width: 100%;
+    border-radius: 20px;
+    box-shadow: 4px 6px 5px #888888;
+
+}
+
+.stepper_container {
+    padding: 5% 10%;
+}
+
+.stepper_container ul {
+    list-style: none;
+    position: relative;
+    padding: 0;
+}
+
+.stepper_container ul:before {
+    content: '';
+    position: absolute;
+    width: 2px;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #595959;
+}
+
+.stepper_container ul li {
+    padding: 15px 10px;
+}
+
+.stepper_container ul li div {
+    padding: 0 5%;
+}
+
+.stepper_container ul li span {
+    color: #595959;
+    position: absolute;
+    left: -5%;
+    font-size: 15px;
+    background-color: #fff;
+    padding: 5px 0;
+}
+
+.stepper_container ul li.selected_step div {
+    color: #31a13c;
+    font-weight: bold;
+}
+
+/* Order Information Completed*/
+
+.status_order_info {
+    font-size: 17px;
+    margin-left: 41%;
+    background-color: #31A13C;
+    border: 1px solid #31A13C;
+    border-radius: 8px;
+    color: white;
+    width: 27%;
+    height: 65%;
+}
+
+.feedback_btn {
+    width: 100%;
+    margin-top: 60%;
+}
+
+/* Feedback page */
+
+.finger {
+    color: #0031FF;
+    padding: 0 10px;
+    cursor: pointer;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #31a13c;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #31a13c;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+#feedback_photo {
+    padding: 16px 48px;
+    border: 3px solid #31a13c;
+    border-radius: 20px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: bold;
+    color: #31a13c;
+    cursor: pointer;
+    width: 100%;
+}
+
+#feedback_photo:hover {
+    transform: scale(1.04)
+}
+
+#feedback_photo:active {
+    background-color: #31a13c;
+    color: white;
+}
