--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -259,6 +259,14 @@ form .form-control {
     border: 1px solid #31A13C !important;
 }
 
+.card_queston {
+    border: none;
+}
+
+.card-header {
+    background-color:  #F7F7F7 !important;
+}
+
 
 /* About Us page */
 
@@ -599,46 +607,274 @@ form .form-control {
     height: 30px;
 }
 
-/*Porduct page*/
-.stars {
-    height: 1.5px;
-
+.account_block_bnt {
+    background: transparent linear-gradient(221deg, #FFFFFF 0%, #31A13C 100%) 0% 0% no-repeat padding-box;
+    border: 1px solid #31A13C;
+    width: 100%;
+    height: 30px;
+    margin-top: 10px;
+    border-radius: 15px;
+    box-shadow: 4px 6px 5px #888888;
+    cursor: pointer;
 }
-.checked{
+
+.account_block_link {
+    color: black
+}
+
+.account_block_link:hover {
+    color: white;
+}
+
+
+#completed_block::-webkit-scrollbar {
+    width: 6px;
+    background:  #F7F7F7;
+    border-radius: 8px;
+    visibility: hidden;
+}
+
+#completed_block::-webkit-scrollbar-thumb {
+    background: #289433;
+    border-radius: 8px;
+    visibility: hidden;
+}
+
+#active_block::-webkit-scrollbar {
+    width: 6px;
+    background:  #F7F7F7;
+    border-radius: 8px;
+    visibility: hidden;
+}
+
+#active_block::-webkit-scrollbar-thumb {
+    background: #289433;
+    border-radius: 8px;
+    visibility: hidden;
+}
+
+/* Order Information Page*/ 
+
+.chevron_back {
+    color: black;
+}
+
+.chevron_back:hover {
     color: #31A13C;
 }
 
-.produc_block{
-    margin-top: 0%;
-    background: #F7F7F7 0% 0% no-repeat padding-box;
-    border: 1px solid #31A13C;
-    border-radius: 30px;
-    height: 200px;
-    width: 70px;
+.delivery_text_order_info {
+    font-weight: bold;
+    font-size: 18px;
+    margin-top: 3px;
 }
 
-.delivery-info{
-    float: left;
+.status_order_info {
+    font-size: 17px;
+    margin-top: 3px;
+    margin-left: 41%;
+    background-color: #31A13C;
+    border: 1px solid #31A13C;
+    border-radius: 8px;
+    color: white;
+    width: 27%;
+    height: 60%;
+}
+
+.chevron {
+    margin-top: 25%;
+    margin-left: 20%;
+    color: black;
+}
+
+.chevron:hover {
+    color: #31A13C;
+}
+
+.order_info_text_in_block {
+    font-weight: bold;
+    font-size: 17px;
+}
+
+.tracking_block {
+    background-color: white;
+    border: 1px solid #31A13C;
+    width: 100%;
+    border-radius: 20px;
+    box-shadow: 4px 6px 5px #888888;
+
+}
+
+.stepper_container {
+    padding: 5% 10%;
+}
+
+.stepper_container ul {
+    list-style: none;
+    position: relative;
+    padding: 0;
+}
+
+.stepper_container ul:before {
+    content: '';
+    position: absolute;
+    width: 2px;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #595959;
+}
+
+.stepper_container ul li {
+    padding: 15px 10px;
+}
+
+.stepper_container ul li div {
+    padding: 0 5%;
+}
+
+.stepper_container ul li span {
+    color: #595959;
+    position: absolute;
+    left: -5%;
+    font-size: 15px;
+    background-color: #fff;
+    padding: 5px 0;
+}
+
+.stepper_container ul li.selected_step div {
+    color: #31a13c;
+    font-weight: bold;
+}
+
+/* Order Information Completed*/
+
+.status_order_info {
+    font-size: 17px;
+    margin-left: 41%;
+    background-color: #31A13C;
+    border: 1px solid #31A13C;
+    border-radius: 8px;
+    color: white;
+    width: 27%;
+    height: 65%;
+}
+
+.feedback_btn {
+    width: 100%;
+    margin-top: 60%;
+}
+
+/* Feedback page */
+
+.finger {
+    padding: 0 10px;
+    cursor: pointer;
+}
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #31a13c;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #31a13c;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+#feedback_photo {
+    padding: 16px 48px;
+    border: 3px solid #31a13c;
+    border-radius: 20px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: bold;
+    color: #31a13c;
+    cursor: pointer;
     width: 100%;
 }
-.delivery-info p {
-    word-break: break-all;
-}
-.size-button{
-    background-color: none; /* Green */
-    border: #31A13C;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 50%;
-    }
 
-<<<<<<< HEAD
+#feedback_photo:hover {
+    transform: scale(1.04)
+}
+
+#feedback_photo:active {
+    background-color: #31a13c;
+    color: white;
+}
+
+.rating { 
+  border: none;
+  float: left;
+}
+
+.rating > input { 
+    display: none; 
+}
+
+.rating > label:before { 
+  padding: 0 15px;
+  font-size: 2em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f087";
+}
+
+.rating > label { 
+  color: black; 
+ float: right; 
+}
+
 .rating > input:checked ~ label, /* show gold star when clicked */
 .rating:not(:checked) > label:hover, /* hover current star */
 .rating:not(:checked) > label:hover ~ label { color: #0031FF;  } /* hover previous stars in list */
@@ -797,15 +1033,3 @@ form .form-control {
         text-align: center;
         box-shadow: 0px 4px 4px 4px #888888;
         }
-<<<<<<< HEAD
-   
-=======
-   
-      
-      
-     
-      
-      
-      
-      
->>>>>>> 501585b1326e7718f96c89e19d6b4ce5f6d042cc
