--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -252,11 +252,13 @@ form .form-control {
 .answer_box {
     border-radius: 15px !important;
     border: 1px solid #31A13C !important;
+    background-color: white !important;
 }
 
 .button_box {
     border-radius: 15px !important;
     border: 1px solid #31A13C !important;
+    color: black !important;
 }
 
 .card_queston {
@@ -524,8 +526,7 @@ form .form-control {
     box-shadow: 17px 15px 0px #31A13C;
     border: 1px solid #707070;
     border-radius: 30px;
-    height: 100%;
-    /*width: 100%;*/
+    height: 390px
 }
 
 .p_name {
@@ -576,11 +577,9 @@ form .form-control {
     background-color: white;
     border: 1px solid #31A13C;
     width: 100%;
-    height: 190px;
     margin-top: 30px;
     border-radius: 20px;
     box-shadow: 4px 6px 5px #888888;
-    cursor: pointer;
 }
 
 .delivery_text {
@@ -590,9 +589,9 @@ form .form-control {
 }
 
 .product_img_orders {
-    width: 100px;
-    height: 100px;
-    margin-right: 75%;
+    width: 70%;
+    height: 90%;
+    padding: 5px;
 }
 
 .status {
