--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -457,16 +457,18 @@ form .form-control {
 
 .filter-group {
 	margin-top: 2%;
-   background-color: #31A13C;
    color: white;
    border-radius: 8px;
  }
 
  .card-header {
    padding: 0.75rem 1.25rem;
+   background-color: #31A13C !important;
+   border-radius: 8px !important;
 }
 
 .title {
+	padding-top: 1%;
  	color: white;
  	font-size: 17px;
 }
