--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -425,7 +425,7 @@ form .form-control {
     transform: scale(1.4);
 }
 
-.show_more_btn {
+.show_more {
 	margin: 3% 5% 0 2%;
    background-color: #FFFFFF;
    height: 60px;
@@ -433,6 +433,14 @@ form .form-control {
    box-shadow: 0px 4px 4px 4px #888888;
    border: 1px solid #fff;
    font-size: 20px;
+}
+
+.show_more_btn {
+	background-color: #FFFFFF;
+	border: none;
+	width: 100%;
+	height: 100%;
+
 }
 
 .pages {
@@ -524,6 +532,14 @@ form .form-control {
 	height: 30px;
 	width: 70px;
 	background-color: #ccc;
+}
+
+.recently_viewed {
+	margin-right: 3%;
+   background-color: white;
+   height: 100%;
+   box-shadow: 0px 4px 4px 4px #888888;
+   border-radius: 3px;
 }
 
 
