--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -1066,3 +1066,46 @@ input:checked + .slider:before {
         text-align: center;
         box-shadow: 0px 4px 4px 4px #888888;
         }
+
+
+/* My Cart*/
+
+.table-shopping-cart.table td, .table-shopping-cart.table th {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem; }
+.table-shopping-cart .price-wrap {
+  line-height: 1.2; }
+.table-shopping-cart .price {
+  font-weight: bold;
+  margin-right: 5px;
+  display: block; }
+
+.table-shopping-cart tr td:first-child {
+    width: 250px; }
+.table-shopping-cart .itemside .info {
+    padding: 0; }
+.table-shopping-cart .itemside .aside {
+    display: none; } 
+
+.itemside {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%; }
+
+.itemside p {
+ margin-bottom: 0; }
+
+.itemside .title {
+    display: block;
+    margin-bottom: 5px;
+    color: #212529; }
+
+.price {
+  font-weight: 600;
+  color: #212529; }
+
+  .img-sm {
+  width: 80px;
+  height: 80px; }
