--- a/css_files/vastestyle.css
+++ b/css_files/vastestyle.css
@@ -923,31 +923,32 @@ input:checked + .slider:before {
 /*Porduct page*/
 .stars {
     height: 1.5px;
-
-}
-.checked{
-    color: #31A13C;
-}
-
-.produc_block{
+    position: relative;
+    float: left;
+  }
+  .checked {
+    color: #31a13c;
+  }
+  
+  .produc_block {
     margin-top: 0%;
-    background: #F7F7F7 0% 0% no-repeat padding-box;
-    border: 1px solid #31A13C;
+    background: #f7f7f7 0% 0% no-repeat padding-box;
+    border: 1px solid #31a13c;
     border-radius: 30px;
     height: 200px;
     width: 70px;
-}
-
-.delivery-info{
+  }
+  
+  .delivery-info {
     float: left;
     width: 100%;
-}
-.delivery-info p {
+  }
+  .delivery-info p {
     word-break: break-all;
-}
-.size-button{
+  }
+  .size-button {
     background-color: none; /* Green */
-    border: #31A13C;
+    border: #31a13c;
     color: white;
     padding: 20px;
     text-align: center;
@@ -957,115 +958,245 @@ input:checked + .slider:before {
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 50%;
-    }
-
-=======
->>>>>>> 501585b1326e7718f96c89e19d6b4ce5f6d042cc
-    .containerprice { 
-        height: 200px;
-        position: relative;
-        border: 3px solid green; 
-      }
-    
-      /* Description Information*/
-
-      .unstyled{
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-      .section__list {
-        display: flex;
-        flex-wrap: wrap;
-        margin: 0 -8px;
-      }
-      
-      .section__item {
-        box-sizing: border-box;
-        padding: 0 8px 10px;
-        flex-basis: 50%;
-        max-width: 50%;
-      }
-      .tab-content--slider {
-        padding-bottom: 45px;
-      }
-      .tab-content--slider .slick-arrow {
-        background-color: transparent;
-        border: 0;
-        border-radius: 50%;
-        color: #707070;
-        cursor: pointer;
-        font-size: 0;
-        height: 24px;
-        padding: 0;
-        position: absolute;
-        text-align: center;
-        bottom: 15px;
-        width: 24px;
-        line-height: 24px;
-        z-index: 99;
-      }
-      
-      .tab-content--slider .slick-prev {
-        left: 15px;
-      }
-      .tab-content--slider .slick-next {
-        right: 15px;
-      }
-      
-      .tab-content--slider .slick-dots li {
-        margin: 0 5px;
-      }
-      
-      .tab-content--slider .slick-dots button {
-        display: block;
-        width: 6px;
-        height: 6px;
-        padding: 0;
-        border: none;
-        border-radius: 100%;
-        background-color: #707070;
-        text-indent: -9999px;
-      }
-      
-      .tab-content--slider .slick-dots .slick-active button {
-        background-color: #0e357f;
-      }
-      .tab-content--slider .slick-dots {
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        bottom: 23px;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        margin: 0;
-        list-style-type: none;
-      }
-      
-      .tab-info__item {
-        border-bottom: 1px solid #d9e4e6;
-        display: block;
-        overflow: hidden;
-        padding: 14px 16px;
-      }
-      /* Recently view*/
-      
-    
-      .recently_block {
-        height: 30%;
-        margin-top: 10px;
-        margin-right: 20px;
-        position: relative;
-        background-color: #FFFFFF;
-        border-radius: 5px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        box-shadow: 0px 4px 4px 4px #888888;
-        }
+    position: relative;
+  }
+  
+  .containerprice {
+    height: 200px;
+    position: relative;
+    border: 3px solid green;
+  }
+  
+  /* Description Information*/
+  
+  .unstyled {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .section__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -8px;
+  }
+  
+  .section__item {
+    box-sizing: border-box;
+    padding: 0 8px 10px;
+    flex-basis: 50%;
+    max-width: 50%;
+  }
+  .tab-content--slider {
+    padding-bottom: 45px;
+  }
+  .tab-content--slider .slick-arrow {
+    background-color: transparent;
+    border: 0;
+    border-radius: 50%;
+    color: #707070;
+    cursor: pointer;
+    font-size: 0;
+    height: 24px;
+    padding: 0;
+    position: absolute;
+    text-align: center;
+    bottom: 15px;
+    width: 24px;
+    line-height: 24px;
+    z-index: 99;
+  }
+  
+  .tab-content--slider .slick-prev {
+    left: 15px;
+  }
+  .tab-content--slider .slick-next {
+    right: 15px;
+  }
+  
+  .tab-content--slider .slick-dots li {
+    margin: 0 5px;
+  }
+  
+  .tab-content--slider .slick-dots button {
+    display: block;
+    width: 6px;
+    height: 6px;
+    padding: 0;
+    border: none;
+    border-radius: 100%;
+    background-color: #707070;
+    text-indent: -9999px;
+  }
+  
+  .tab-content--slider .slick-dots .slick-active button {
+    background-color: #0e357f;
+  }
+  .tab-content--slider .slick-dots {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 23px;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    list-style-type: none;
+  }
+  
+  .tab-info__item {
+    border-bottom: 1px solid #d9e4e6;
+    display: block;
+    overflow: hidden;
+    padding: 14px 16px;
+  }
+  /* Recently view*/
+  
+  .recently_block {
+    height: 30%;
+    margin-top: 10px;
+    margin-right: 20px;
+    position: relative;
+    float: left;
+    background-color: #ffffff;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0px 4px 4px 4px #888888;
+  }
+  .smallPicture {
+    justify-content: center;
+  }
+  .smallPicture.imgContainer {
+    overflow: hidden;
+  }
+  .smallPicture.imgContainer img {
+    transition: all 1.5s ease;
+  }
+  
+  .smallPicture.imgContainer :hover img {
+    transform: scale(1.5);
+  }
+  html {
+    min-width: 550px;
+    position: relative;
+  }
+  .product-size {
+    border-radius: 50%;
+    border-color: green;
+    background-color: white;
+    cursor: pointer;
+  }
+  
+  .btn-circle.btn-xl {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    font-size: 15px;
+    line-height: 1.33;
+    color: black;
+    background-color: white;
+    border-color: green;
+    margin-top: 5px;
+    margin-left: 5px;
+  }
+  
+  .btn-circle {
+    background-color: white;
+    border-color: green;
+    width: 40px;
+    height: 40px;
+    padding: 10px 0px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 12px;
+    margin-left: 5px;
+    justify-content: center;
+  }
+  
+  .btn-ground.btn-xl {
+    width: 100px;
+    height: 40px;
+    border-radius: 50px;
+    font-size: 15px;
+    line-height: 1.33;
+    color: black;
+    background-color: white;
+    border-color: green;
+    margin-top: 5px;
+    margin-left: 5px;
+  }
+  
+  .btn-ground {
+    background-color: white;
+    border-color: green;
+    width: 40px;
+    height: 80px;
+    padding: 10px 0px;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 12px;
+    margin-left: 5px;
+    justify-content: center;
+  }
+  
+  .button-normal {
+    background-color: white;
+    border-color: green;
+    width: 40px;
+    height: 80px;
+    padding: 10px 0px;
+    border-radius: none;
+    text-align: center;
+    font-size: 12px;
+    margin-left: 5px;
+    justify-content: center;
+  }
+  .button-normal.btn-xl {
+    background-color: white;
+    border-color: green;
+    padding: 10px 0px;
+    border-radius: none;
+    text-align: center;
+    font-size: 12px;
+    margin-left: 5px;
+    justify-content: center;
+  }
+  
+  .imgContainer {
+    overflow: hidden;
+  }
+  .imgContainer img {
+    transition: all 1.5s ease;
+  }
+  
+  .imgContainer :hover img {
+    transform: scale(1.5);
+  }
+  
+  .ProductTab_Info {
+    width: 100%;
+    height: 350px;
+  }
+  .ProductTab_Info .navTab nav nav-tabs {
+    height: 15%;
+  }
+  .ProductTab_Info .navTab button {
+    width: 25%;
+    height: 100%;
+    float: left;
+    border: green;
+    background-color: green;
+    outline: black;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    background-color: white;
+    color: black;
+    display: hover;
+  }
+  
 
 
 /* My Cart*/
